assign subject
